Relabel options according to Carto

--- a/services.ipynb
+++ b/services.ipynb
@@ -2,14 +2,14 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [
         {
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "C:\\Users\\maola\\AppData\\Local\\Temp\\ipykernel_16780\\3604605244.py:6: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
+            "C:\\Users\\maola\\AppData\\Local\\Temp\\ipykernel_16780\\1023239090.py:6: ParserWarning: Length of header or names does not match length of data. This leads to a loss of data with index_col=False.\n",
             "  services = pd.read_csv('Aurora_Office_Fase_2_-_all_versions_-_False_-_2023-09-20-21-01-20.csv', sep=';', index_col = False)\n"
           ]
         }
@@ -23,7 +23,6 @@
         "services = pd.read_csv('Aurora_Office_Fase_2_-_all_versions_-_False_-_2023-09-20-21-01-20.csv', sep=';', index_col = False)\n",
         "\n",
         "# rename variables\n",
-        "# Are still missing the ones related to schedule\n",
         "newColumns = {'_coordenadas_latitude': 'lat', \n",
         "              '_coordenadas_longitude' : 'long',  \n",
         "              'pais' : 'ubicacion' , \n",
@@ -44,13 +43,42 @@
         "              'retos' : 'princ_reto',\n",
         "              'idiomas' : 'idioma_ent',\n",
         "               'medios' :  'medios_bri',\n",
+        "               'diarioasesorialegal' : 'cap_serv_l',\n",
+        "               'ayerasesorialegal' : 'cap_serv_1',\n",
+        "              'diarioalimentacionynutricion' : 'tipo_alime',\n",
+        "              'ayeralimentacionynutricion' : 'pers_alim',\n",
+        "              'diariosaludprimerosauxiliosyatencionmedica' : 'pers_atien',\n",
+        "              'ayersaludprimerosauxiliosyatencionmedica' : 'serv_sal_1',\n",
+        "              'diarioaguapotable' : 'prom_agua_',\n",
+        "              'ayeraguapotable' : 'serv_agua',\n",
+        "              'diariosaneamiento' : 'serv_san_d',\n",
+        "              'ayersaneamiento' : 'serv_san_a',\n",
+        "              'diariohigiene' : 'serv_hig_d',\n",
+        "              'ayerhigiene' : 'serv_hig_a',\n",
+        "              'diarioeducacion' : 'serv_edu_d',\n",
+        "              'ayereducacion' : 'serv_edu_a',\n",
+        "              'diarioalojamientotemporal' : 'serv_aloj',\n",
+        "              'ayeralojamientotemporal' : 'serv_aloj_',\n",
+        "              'diarioapoyooayudapsicosocial' : 'serv_psico',\n",
+        "              'ayerapoyooayudapsicosocial' : 'serv_psi_1',\n",
+        "              'diariotransportehumanitario' : 'serv_trans',\n",
+        "              'ayertransportehumanitario' : 'serv_tra_1',\n",
+        "              'diarioserviciosproteccion' : 'serv_prot_c', #new variable before was taken from \"other\" services\n",
+        "              'ayerserviciosproteccion' : 'serv_prot_a', #new variable before was taken from \"other\"  services\n",
+        "              'diariorestablecimientodecontactofamiliar' : 'serv_esta_c', #new variable before was taken from \"other\" services\n",
+        "              'ayerrestablecimientodecontactofamiliar' : 'serv_esta_a',  #new variable before was taken from \"other\" services\n",
+        "              'diariotransferenciasmonetarias' : 'serv_trans_c',\n",
+        "              'ayertransferenciasmonetarias' : 'serv_trans_a',\n",
+        "              'diariootro' : 'serv_tra_2',\n",
+        "              'ayerotro' : 'atend_serv',\n",
+        "\n",
         "              }\n",
         "services_carto = services.rename(columns=newColumns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -111,7 +139,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -124,14 +152,15 @@
         "  4 :\"aguapotable\",\n",
         "  5 :\"saneamiento\",\n",
         "  6 :\"higiene\",\n",
-        "  7 :\"educacion\",\n",
-        "  8 :\"alojamientotemporal\",\n",
-        "  9 :\"serviciosdeproteccion\",\n",
-        "  10 :\"acompañamientoayudapsicosocial\",\n",
-        "  11 :\"transportehumanitario\",\n",
-        "  12 :\"restablecimientodecontactofamiliar\",\n",
-        "  13:\"transferencias\",\n",
-        "  14:\"Otro\",\n",
+        "  8 :\"educacion\",\n",
+        "  9 :\"alojamientotemporal\",\n",
+        "  11 :\"acompañamientoayudapsicosocial\",\n",
+        "  12 :\"transportehumanitario\",\n",
+        "  13 :\"Otro\",\n",
+        "  14 : \"serviciosdeproteccion\",\n",
+        "  16 : \"restablecimientodecontactofamiliar\",\n",
+        "  18 : \"transferencias\",  # new service: \"Transferencias Monetarias\"\n",
+        "      \n",
         "}\n",
         "\n",
         "# re structure variable cuenta_con\n",
@@ -148,27 +177,28 @@
         "\n",
         "# re structure variable children services (cual_serv1)\n",
         "cual_serv1_dict = {\n",
-        "  1 :\"nnaalimentacionynutricion\",\n",
-        "  2 :\"nnaapoyooayudapsicosocial\",\n",
-        "  3 :\"nnabanosexclusivosnna\",\n",
-        "  4 :\"nnacuidadosalternativos\",\n",
-        "  5 :\"nnaentregadekits\",\n",
-        "  6 :\"espaciosamigables\",\n",
-        "  7 :\"nnagestiondecasos\",\n",
-        "  8 :\"nnaotro\",\n",
+        "  1 :\"nnaapoyooayudapsicosocial\",\n",
+        "  2 :\"nnagestiondecasos\",\n",
+        "  3 :\"nnaentregadekits\",\n",
+        "  4 :\"nnaalimentacionynutricion\",\n",
+        "  5 :\"nnabanosexclusivosnna\", \n",
+        "  6 :\"nnacuidadosalternativos\",\n",
+        "  7 :\"nnaotro\",\n",
+        "  8 :\"espaciosamigables\", # New option: Espacios Amigables\n",
         "  9 : \" \",\n",
         "}\n",
         "\n",
         "# re structure variable women services (cual_ser_2)\n",
         "cual_ser_2_dict = {\n",
-        "  1 :\"mujeresapoyonutricionalgestantesylactantes\",\n",
-        "  2 :\"mujerescontrolesprenatales\",\n",
-        "  3 :\"mujeresduchasobanos\",\n",
-        "  4 :\"mujeresespaciosseguros\",\n",
-        "  5 :\"mujeresgestiondecasosdeviolenciasbasadasengenero\",\n",
-        "  6 :\"mujeresproductosdehigienemenstrual\",\n",
-        "  7 :\"mujeresotro\",\n",
-        "  8 : \" \",\n",
+        "  0 : \" \",\n",
+        "  1 :\"mujeresespaciosseguros\",\n",
+        "  2 :\"mujeresduchasobanos\",\n",
+        "  3 :\"mujeresgestiondecasosdeviolenciasbasadasengenero\",\n",
+        "  4 :\"mujeresproductosdehigienemenstrual\",\n",
+        "  5 :\"mujeresotro\",\n",
+        "  6 :\"mujerescontrolesprenatales\", # New option: Controles prenatales para mujeres gestantes \n",
+        "  7 :\"mujeresapoyonutricionalgestantesylactantes\", #New option: Apoyo nutricional para mujeres lactantes y/o gestantes\n",
+        "\n",
         "}\n",
         "\n",
         "# re structure variable data storage (almacenamientoregistros)\n",
@@ -210,6 +240,7 @@
         "3 :\"creole\",\n",
         "4 :\"portugues\",\n",
         "5 :\"otroidioma\",\n",
+        "6 :\"frances\", \n",
         "}\n",
         "\n",
         "# variable medios\n",
@@ -285,7 +316,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [
         {
