added comments to functions

--- a/services.ipynb
+++ b/services.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -17,6 +17,14 @@
         "\n",
         "\n",
         "def loadLocalJsonDoc(filepath, dataProp=''):\n",
+        "    \"\"\"\n",
+        "    return deserialised json in dictionary\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    filepath: file location or buffer.\n",
+        "    dataProp: (optional) specified property to access required data\n",
+        "    \"\"\"\n",
         "    output = {}\n",
         "    with open(file=filepath, mode='r', encoding='utf-8') as f:\n",
         "        json_load = json.load(f)\n",
@@ -34,7 +42,7 @@
         "services = services.fillna(defaultMissingValue)\n",
         "\n",
         "# rename variables\n",
-        "newColumns = loadLocalJsonDoc(\"default/rename_columns.json\")\n",
+        "newColumns = loadLocalJsonDoc(\"defaults/rename_columns.json\")\n",
         "\n",
         "services_carto = services.rename(columns=newColumns)"
       ]
@@ -107,7 +115,7 @@
       "outputs": [],
       "source": [
         "# serv_tipo (separating by pipe symbol and categorized with number)\n",
-        "codify_dict = loadLocalJsonDoc(\"default/codification_dict.json\")\n",
+        "codify_dict = loadLocalJsonDoc(\"defaults/codification_dict.json\")\n",
         "services_dict = codify_dict[\"services_dict\"]\n",
         "\n",
         "# re structure variable cuenta_con\n",
@@ -454,12 +462,35 @@
         "# Look up function\n",
         "\n",
         "def fillColumnWithLookup(df: DataFrame, values: list[tuple[str, str]], lookup_column: str, target_column:str):\n",
+        "    \"\"\" \n",
+        "    returns DataFrame with new columns filled with lookup parameters\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    df: DataFrame\n",
+        "    values: list of 2-dimensional tuple. First is testing value.\n",
+        "    Second is the output columns to which to place values that match the first.\n",
+        "    lookup_column: a string of the field or column or dict property to which test the testing value\n",
+        "    target_column: a string of a field or column or dict property to get the required value\n",
+        "    \"\"\"\n",
         "    working_df = deepcopy(df)\n",
         "    for (value, output_column) in values:\n",
         "        working_df.loc[(working_df[lookup_column]== value), target_column] = working_df[output_column]\n",
         "    return working_df\n",
         "\n",
         "def processColumnFill(df: DataFrame, columnValues: list[dict]):\n",
+        "    \"\"\" \n",
+        "    returns DataFrame with new columns filled with lookup parameters\n",
+        "\n",
+        "    Parameters\n",
+        "    ----------\n",
+        "    df: DataFrame\n",
+        "    columnValues: list of Objects having:\n",
+        "        values: list of 2-dimensional tuple. First is testing value.\n",
+        "        Second is the output columns to which to place values that match the first.\n",
+        "        lookup_column: a string of the field or column or dict property to which test the testing value\n",
+        "        target_column: a string of a field or column or dict property to get the required value\n",
+        "    \"\"\"\n",
         "    working_df = deepcopy(df)\n",
         "    for column in columnValues:\n",
         "        lookup_column = column[\"lookup_column\"]\n",
@@ -1265,7 +1296,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.11.6"
     },
     "orig_nbformat": 4
   },
