added date parsing function

--- a/services.ipynb
+++ b/services.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -11,6 +11,7 @@
         "from pandas import DataFrame\n",
         "from pandas import Series\n",
         "from copy import deepcopy\n",
+        "from datetime import datetime\n",
         "import json\n",
         "\n",
         "defaultMissingValue = 999999\n",
@@ -44,15 +45,23 @@
         "# rename variables\n",
         "newColumns = loadLocalJsonDoc(\"defaults/rename_columns.json\")\n",
         "\n",
+        "\n",
         "services_carto = services.rename(columns=newColumns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
+        "def toUnixTimestamp(time, format:str = \"%d/%m/%Y\"):\n",
+        "    start = datetime(1970, 1, 1)\n",
+        "    target = datetime.strptime(time, format)\n",
+        "    in_seconds = (target - start).total_seconds()\n",
+        "    in_milliseconds = int(in_seconds) * 1000\n",
+        "    return in_milliseconds\n",
+        "\n",
         "def codifyServices(value: str, values_dict: dict[str, int], otherValue:str):\n",
         "    if(type(value) == float or type(value) == int):\n",
         "        return otherValue\n",
@@ -106,6 +115,16 @@
         "        df.to_json(name, orient=\"records\")\n",
         "        print (f\"data export to {name}\")\n",
         "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# parsing date field into unix timestamp\n",
+        "services_carto[\"timeunix\"] = services_carto[\"fecha\"].apply(lambda x: toUnixTimestamp(time=x, format=\"%Y-%m-%d\"))"
       ]
     },
     {
@@ -1296,7 +1315,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.6"
+      "version": "3.9.7"
     },
     "orig_nbformat": 4
   },
