--- a/services.ipynb
+++ b/services.ipynb
@@ -2,15 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
-      "execution_count": 150,
-=======
-      "execution_count": 2,
->>>>>>> parent of 6ab60ec (added date parsing function)
-=======
-      "execution_count": 2,
->>>>>>> parent of 6ab60ec (added date parsing function)
+      "execution_count": 168,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -19,6 +11,7 @@
         "from pandas import DataFrame\n",
         "from pandas import Series\n",
         "from copy import deepcopy\n",
+        "from datetime import datetime\n",
         "import json\n",
         "\n",
         "defaultMissingValue = 999999\n",
@@ -57,15 +50,85 @@
     },
     {
       "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
-      "execution_count": 151,
-=======
-      "execution_count": 29,
->>>>>>> parent of 6ab60ec (added date parsing function)
-=======
-      "execution_count": 29,
->>>>>>> parent of 6ab60ec (added date parsing function)
+      "execution_count": 169,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def toUnixTimestamp(time, format:str = \"%d/%m/%Y\"):\n",
+        "    start = datetime(1970, 1, 1)\n",
+        "    target = datetime.strptime(time, format)\n",
+        "    in_seconds = (target - start).total_seconds()\n",
+        "    in_milliseconds = int(in_seconds) * 1000\n",
+        "    return in_milliseconds\n",
+        "\n",
+        "def codifyServices(value: str, values_dict: dict[str, int], otherValue:str):\n",
+        "    if(type(value) == float or type(value) == int):\n",
+        "        return otherValue\n",
+        "    raw_values = value.split(\" \")\n",
+        "    output = []\n",
+        "    for value in raw_values:\n",
+        "        try:      \n",
+        "            codedValue = values_dict[value]\n",
+        "            output.append(str(codedValue) )\n",
+        "        except Exception as e:\n",
+        "            output.append(otherValue)\n",
+        "            \n",
+        "    return \"|\".join(output)\n",
+        "\n",
+        "def processColumn(dfColumn:Series, values_dict: dict[int, str], other_value: str):\n",
+        "    reversed_values_dict = dict( [( x[1],x[0])  for x in values_dict.items()])\n",
+        "    return dfColumn.apply(lambda x: codifyServices(x, reversed_values_dict, other_value))\n",
+        "\n",
+        "def processMultValueColumns(df: DataFrame, columnObjectsList: list[dict]):\n",
+        "    \"\"\"\n",
+        "    df: DataFrame object\n",
+        "    columnsObjectsList: list of column object\n",
+        "    columnObject: dictionary {\"target_column\": str, \"output_column\": str, values_dict: dict, other_value: str}\n",
+        "\n",
+        "    return DataFrame Object\n",
+        "    \"\"\"\n",
+        "    for columnObject in columnObjectsList:\n",
+        "        try:\n",
+        "            target_column = columnObject[\"target_column\"]\n",
+        "            output_column = columnObject[\"output_column\"]\n",
+        "            values_dict = columnObject[\"values_dict\"]\n",
+        "            other_value = str(columnObject[\"other_value\"])\n",
+        "            df[output_column] =  processColumn(df[target_column], values_dict, other_value)\n",
+        "        except Exception as e:\n",
+        "            print(e)\n",
+        "            continue\n",
+        "    return df\n",
+        "\n",
+        "def exportToFile(df: DataFrame,fileType: str, exportName: str):\n",
+        "    \"\"\" \n",
+        "    df -> Pandas DataFrame object\n",
+        "    fileType -> Either \"csv\" or \"json\"\n",
+        "    exportName -> File location\n",
+        "    \"\"\"\n",
+        "    if(fileType == \"csv\"):\n",
+        "        name = f\"{exportName}.csv\"\n",
+        "        df.to_csv(name)\n",
+        "        print (f\"data export to {name}\")\n",
+        "    else:\n",
+        "        name = f\"{exportName}.json\"\n",
+        "        df.to_json(name, orient=\"records\")\n",
+        "        print (f\"data export to {name}\")\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 171,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# parsing date field into unix timestamp\n",
+        "services_carto[\"timeunix\"] = services_carto[\"fecha\"].apply(lambda x: toUnixTimestamp(time=x, format=\"%Y-%m-%d\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 172,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -126,14 +189,7 @@
     },
     {
       "cell_type": "code",
-<<<<<<< HEAD
-<<<<<<< HEAD
       "execution_count": 153,
-=======
-=======
->>>>>>> parent of 6ab60ec (added date parsing function)
-      "execution_count": 30,
->>>>>>> parent of 6ab60ec (added date parsing function)
       "metadata": {},
       "outputs": [],
       "source": [
