Changes in specific variables

--- a/services.ipynb
+++ b/services.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 168,
+      "execution_count": 83,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -37,20 +37,33 @@
         "\n",
         "# Import dataset\n",
         "services = pd.read_csv(\n",
-        "    'Aurora_OfficeRonda_2_-_latest_version_-_False_-_2023-10-04-16-15-49.csv', sep=';', index_col=False)\n",
+        "    'Caracterización_de_punto_de_servicio_-_Aurora_Office_-_Ronda_2_-_all_versions_-_False_-_2023-10-23-18-05-06.csv', sep=';', index_col=False)\n",
+        "\n",
+        "# Replace \"other in organizations\"\n",
+        "services.loc[services['organizacionimplementadora'] == \"otra\", 'organizacionimplementadora'] = services['cualotraorganizacionimp']\n",
+        "services.loc[services['organizacionprincipal'] == \"otra\", 'organizacionprincipal'] = services['cualotraorganizacionprin']\n",
+        "\n",
+        "# Fill  missing values of variables of attended separated children\n",
+        "common = services['nnanoacompanados'].isnull()\n",
+        "common1= services['nnaseparados'].isnull()\n",
+        "condition = [(services['numeronna'] ==0) & (common)]\n",
+        "condition1 = [(services['numeronna'] ==0) & (common)]\n",
+        "fill_with = ['no']\n",
+        "\n",
+        "services['nnanoacompanados'] = np.select(condition, fill_with, default=services['nnanoacompanados'])\n",
+        "services['nnaseparados'] = np.select(condition1, fill_with, default=services['nnaseparados'])\n",
         "\n",
         "# Fill  missing values\n",
         "services = services.fillna(defaultMissingValue)\n",
         "\n",
         "# rename variables\n",
         "newColumns = loadLocalJsonDoc(\"defaults/rename_columns.json\")\n",
-        "\n",
         "services_carto = services.rename(columns=newColumns)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 169,
+      "execution_count": 84,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -118,7 +131,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 171,
+      "execution_count": 85,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -128,7 +141,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 172,
+      "execution_count": 86,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -189,7 +202,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 153,
+      "execution_count": 87,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -281,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 154,
+      "execution_count": 88,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -290,7 +303,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 155,
+      "execution_count": 89,
       "metadata": {},
       "outputs": [
         {
@@ -315,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 156,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -326,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -350,56 +363,115 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th>fecha</th>\n",
-              "      <th>2023-10-03</th>\n",
-              "      <th>2023-10-04</th>\n",
+              "      <th>2023-10-16</th>\n",
+              "      <th>2023-10-17</th>\n",
+              "      <th>2023-10-18</th>\n",
+              "      <th>2023-10-19</th>\n",
+              "      <th>2023-10-20</th>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>encuesta</th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
+              "      <th></th>\n",
               "      <th></th>\n",
               "      <th></th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>joseeduardoherrera</th>\n",
+              "      <th>andresmauricioclavijoabril</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>glenisyurleybarraganjaimes</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>1.0</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>luisdavidcalderonpatino</th>\n",
-              "      <td>1.0</td>\n",
+              "      <th>luiscarlosmejiafallas</th>\n",
               "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>luisricardosolermadrid</th>\n",
               "      <td>2.0</td>\n",
               "      <td>NaN</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>mariaalejandraolartedelgado</th>\n",
-              "      <td>3.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>otro</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>rosakatherinecasanovasilva</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "      <td>1.0</td>\n",
               "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>sheilacristinamunozchoque</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>NaN</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>valentinaalondramedinamedina</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "fecha                        2023-10-03  2023-10-04\n",
-              "encuesta                                           \n",
-              "joseeduardoherrera                  1.0         NaN\n",
-              "luisdavidcalderonpatino             1.0         NaN\n",
-              "luisricardosolermadrid              2.0         NaN\n",
-              "mariaalejandraolartedelgado         3.0         NaN\n",
-              "otro                                1.0         1.0"
+              "fecha                         2023-10-16  2023-10-17  2023-10-18  2023-10-19  \\\n",
+              "encuesta                                                                       \n",
+              "andresmauricioclavijoabril           NaN         NaN         3.0         NaN   \n",
+              "glenisyurleybarraganjaimes           NaN         NaN         NaN         1.0   \n",
+              "luiscarlosmejiafallas                NaN         NaN         NaN         NaN   \n",
+              "luisricardosolermadrid               2.0         NaN         2.0         NaN   \n",
+              "otro                                 NaN         NaN         NaN         NaN   \n",
+              "rosakatherinecasanovasilva           NaN         NaN         1.0         1.0   \n",
+              "sheilacristinamunozchoque            NaN         1.0         NaN         1.0   \n",
+              "valentinaalondramedinamedina         NaN         1.0         2.0         NaN   \n",
+              "\n",
+              "fecha                         2023-10-20  \n",
+              "encuesta                                  \n",
+              "andresmauricioclavijoabril           NaN  \n",
+              "glenisyurleybarraganjaimes           NaN  \n",
+              "luiscarlosmejiafallas                1.0  \n",
+              "luisricardosolermadrid               NaN  \n",
+              "otro                                 1.0  \n",
+              "rosakatherinecasanovasilva           NaN  \n",
+              "sheilacristinamunozchoque            NaN  \n",
+              "valentinaalondramedinamedina         NaN  "
             ]
           },
-          "execution_count": 157,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -421,7 +493,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 158,
+      "execution_count": 13,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -432,7 +504,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
+      "execution_count": 14,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -494,7 +566,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 160,
+      "execution_count": 15,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -505,7 +577,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 161,
+      "execution_count": 16,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -552,7 +624,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 162,
+      "execution_count": 17,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -627,7 +699,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 163,
+      "execution_count": 18,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -636,7 +708,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 164,
+      "execution_count": 20,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -654,7 +726,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 165,
+      "execution_count": 21,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -674,7 +746,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 166,
+      "execution_count": 22,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -684,7 +756,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 167,
+      "execution_count": 23,
       "metadata": {},
       "outputs": [
         {
