added mapper function

--- a/Aurora_raw.ipynb
+++ b/Aurora_raw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 313 entries, 0 to 312\n",
       "Columns: 219 entries, @01_lactante to @zona_pais\n",
-      "dtypes: bool(2), float64(45), int64(2), object(170)\n",
+      "dtypes: bool(2), float64(48), int64(2), object(167)\n",
       "memory usage: 531.4+ KB\n"
      ]
     }
@@ -43,20 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Rename variables according to Carto names (first round)\n",
     "\n",
-    "newColumns = { \n",
-    "                '@phone'\t: 'phone',\n",
-    "                '@id'\t: 'id',\n",
-    "                '@conexion_date' : 'conexion_date',\n",
-    "                '@date_registred' : 'date_registered',\n",
-    "                '@0_flow' : 'flow_type',\n",
-    "                '@1_gestor' : 'gestor',\n",
-    "                '@zona_pais' : 'zona_pais'\n",
+    "newColumns = {\n",
+    "    '@phone': 'phone',\n",
+    "    '@id': 'id',\n",
+    "    '@conexion_date': 'conexion_date',\n",
+    "    '@date_registred': 'date_registered',\n",
+    "    '@0_flow': 'flow_type',\n",
+    "    '@1_gestor': 'gestor',\n",
+    "    '@zona_pais': 'zona_pais'\n",
     "}\n",
     "\n",
     "# there are still missing variables of dates, geographical coordinates, feeback of services.\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.series.Series'>\n",
-      "Int64Index: 294 entries, 0 to 311\n",
+      "Index: 294 entries, 0 to 311\n",
       "Series name: date_registered\n",
       "Non-Null Count  Dtype \n",
       "--------------  ----- \n",
@@ -85,108 +85,124 @@
     }
    ],
    "source": [
-    "#Eliminate observations of Aurora team phones. \n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 56994154407 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 56963085715 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 56930150973 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 56956195946 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 573245502367 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 573002983157 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 573044640378 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 573133910738 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 573185891917 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 573182396683 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 573206646548 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 573216903526 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 573105523263 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 50685075883 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 50660030436 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 50763068014 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 50768244084 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 51963852497 ].index)\n",
-    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 50768689439 ].index)\n",
-    "print(aurora_raw.date_registered.info())\n"
+    "# Eliminate observations of Aurora team phones.\n",
+    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 56994154407].index)\n",
+    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 56963085715].index)\n",
+    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 56930150973].index)\n",
+    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 56956195946].index)\n",
+    "aurora_raw = aurora_raw.drop(\n",
+    "    aurora_raw[aurora_raw.phone == 573245502367].index)\n",
+    "aurora_raw = aurora_raw.drop(\n",
+    "    aurora_raw[aurora_raw.phone == 573002983157].index)\n",
+    "aurora_raw = aurora_raw.drop(\n",
+    "    aurora_raw[aurora_raw.phone == 573044640378].index)\n",
+    "aurora_raw = aurora_raw.drop(\n",
+    "    aurora_raw[aurora_raw.phone == 573133910738].index)\n",
+    "aurora_raw = aurora_raw.drop(\n",
+    "    aurora_raw[aurora_raw.phone == 573185891917].index)\n",
+    "aurora_raw = aurora_raw.drop(\n",
+    "    aurora_raw[aurora_raw.phone == 573182396683].index)\n",
+    "aurora_raw = aurora_raw.drop(\n",
+    "    aurora_raw[aurora_raw.phone == 573206646548].index)\n",
+    "aurora_raw = aurora_raw.drop(\n",
+    "    aurora_raw[aurora_raw.phone == 573216903526].index)\n",
+    "aurora_raw = aurora_raw.drop(\n",
+    "    aurora_raw[aurora_raw.phone == 573105523263].index)\n",
+    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 50685075883].index)\n",
+    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 50660030436].index)\n",
+    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 50763068014].index)\n",
+    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 50768244084].index)\n",
+    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 51963852497].index)\n",
+    "aurora_raw = aurora_raw.drop(aurora_raw[aurora_raw.phone == 50768689439].index)\n",
+    "print(aurora_raw.date_registered.info())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Replace Aurora v2.0 for Enganche, is the same category\n",
-    "aurora_raw['flow_type']=aurora_raw['flow_type'].replace(to_replace=\"Aurora v2.0\", \n",
-    "           value=\"Enganche\")\n",
+    "aurora_raw['flow_type'] = aurora_raw['flow_type'].replace(to_replace=\"Aurora v2.0\",\n",
+    "                                                          value=\"Enganche\")\n",
     "# Replace Paso canoas lower case, is the same category\n",
-    "aurora_raw['zona_pais']=aurora_raw['zona_pais'].replace(to_replace=\"Paso canoas - Costa Rica\", \n",
-    "           value=\"Paso Canoas - Costa Rica\")\n",
-    "aurora_raw['zona_pais']=aurora_raw['zona_pais'].replace(to_replace=\"San Juan de Pasto - Colombia\", \n",
-    "           value=\"Ipiales - Colombia\")\n",
-    "aurora_raw['zona_pais']=aurora_raw['zona_pais'].replace(to_replace=\"los patios - Colombia\", \n",
-    "           value=\"Los patios - Colombia\")\n",
-    "aurora_raw['zona_pais']=aurora_raw['zona_pais'].replace(to_replace=\"Colchane - Bolivia\", \n",
-    "           value=\"Colchane - Chile\")\n",
-    "aurora_raw['zona_pais']=aurora_raw['zona_pais'].replace(to_replace=\"Tacna - Perú\", \n",
-    "           value=\"Arica - Chile\")\n",
+    "aurora_raw['zona_pais'] = aurora_raw['zona_pais'].replace(to_replace=\"Paso canoas - Costa Rica\",\n",
+    "                                                          value=\"Paso Canoas - Costa Rica\")\n",
+    "aurora_raw['zona_pais'] = aurora_raw['zona_pais'].replace(to_replace=\"San Juan de Pasto - Colombia\",\n",
+    "                                                          value=\"Ipiales - Colombia\")\n",
+    "aurora_raw['zona_pais'] = aurora_raw['zona_pais'].replace(to_replace=\"los patios - Colombia\",\n",
+    "                                                          value=\"Los patios - Colombia\")\n",
+    "aurora_raw['zona_pais'] = aurora_raw['zona_pais'].replace(to_replace=\"Colchane - Bolivia\",\n",
+    "                                                          value=\"Colchane - Chile\")\n",
+    "aurora_raw['zona_pais'] = aurora_raw['zona_pais'].replace(to_replace=\"Tacna - Perú\",\n",
+    "                                                          value=\"Arica - Chile\")\n",
     "\n",
     "\n",
     "# Replace bad categories in gestor\n",
-    "#aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"Viviana Castro\", \n",
+    "# aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"Viviana Castro\",\n",
     "#           value=\"9\")\n",
-    "#aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"Rosa Casanova\", \n",
+    "# aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"Rosa Casanova\",\n",
     "#           value=\"7\")\n",
-    "#aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"Deissy Rodríguez\", \n",
+    "# aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"Deissy Rodríguez\",\n",
     "#           value=\"10\")\n",
-    "#aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"Luis David Calderón\", \n",
+    "# aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"Luis David Calderón\",\n",
     "#           value=\"8\")\n",
-    "#aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"José Luis Gaete\", \n",
+    "# aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"José Luis Gaete\",\n",
     "#           value=\"3\")\n",
-    "#aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"Glenis Barragán\", \n",
+    "# aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"Glenis Barragán\",\n",
     "#           value=\"6\")\n",
-    "aurora_raw['gestor']=aurora_raw['gestor'].replace(to_replace=\"El 5\", \n",
-    "           value=\"5\")\n",
-    "\n"
+    "aurora_raw['gestor'] = aurora_raw['gestor'].replace(to_replace=\"El 5\",\n",
+    "                                                    value=\"5\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "aurora_raw[\"date_registered\"]= pd.to_datetime(aurora_raw[\"date_registered\"], format='%d-%m-%Y %H:%M:%S' )\n",
-    "aurora_raw[\"date_\"] = aurora_raw[\"date_registered\"].dt.strftime(\"%Y-%m-%d\")\n"
+    "aurora_raw[\"date_registered\"] = pd.to_datetime(\n",
+    "    aurora_raw[\"date_registered\"], format='%d-%m-%Y %H:%M:%S')\n",
+    "aurora_raw[\"date_\"] = aurora_raw[\"date_registered\"].dt.strftime(\"%Y-%m-%d\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                        8\n",
-       "1          Glenis Barragán\n",
-       "2             José Herrera\n",
-       "3          José Luis Gaete\n",
-       "4      Luis David Calderón\n",
-       "              ...         \n",
-       "307                    NaN\n",
-       "308                    NaN\n",
-       "309                    NaN\n",
-       "310                    NaN\n",
-       "311                    NaN\n",
+       "0         Rosa Casanova\n",
+       "1         Rosa Casanova\n",
+       "2                  None\n",
+       "3      Marianela Varela\n",
+       "4       Glenis Barragán\n",
+       "             ...       \n",
+       "307                None\n",
+       "308                None\n",
+       "309                None\n",
+       "310                None\n",
+       "311                None\n",
        "Name: gestor, Length: 294, dtype: object"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Use dictionary to give other values to the variable\n",
+    "# Use dictionary to give other values to the variable\n",
     "gestor_dict = {\n",
     "    1: \"Glenis Barragán\",\n",
     "    2: \"José Herrera\",\n",
@@ -200,10 +216,21 @@
     "    10: \"Valentina Medina\",\n",
     "    11: \"Viviana Castro\",\n",
     "    12: \"Yuliana Chiquillo\",\n",
-    "  }\n",
+    "}\n",
     "\n",
-    "aurora_raw['gestor'].update(pd.Series(gestor_dict))\n",
-    "aurora_raw.gestor"
+    "\n",
+    "def gestorMap(value):\n",
+    "    try:\n",
+    "\n",
+    "        if (type(value) == int):\n",
+    "            return gestor_dict[value]\n",
+    "        if (type(value) == str):\n",
+    "            return gestor_dict[int(value)]\n",
+    "    except Exception as e:\n",
+    "        return value\n",
+    "\n",
+    "\n",
+    "aurora_raw['gestor'].apply(lambda x: gestorMap(x))"
    ]
   },
   {
@@ -982,11 +1009,12 @@
     }
    ],
    "source": [
-    "unpivoted = aurora_raw.groupby(['zona_pais', 'flow_type', 'date_'])['id'].count().reset_index()\n",
+    "unpivoted = aurora_raw.groupby(['zona_pais', 'flow_type', 'date_'])[\n",
+    "    'id'].count().reset_index()\n",
     "pivoted = unpivoted.pivot(\n",
-    "   columns='date_',\n",
-    "   index= ['zona_pais', 'flow_type'],\n",
-    "  values='id')\n",
+    "    columns='date_',\n",
+    "    index=['zona_pais', 'flow_type'],\n",
+    "    values='id')\n",
     "# Reset the index of the pivoted DataFrame\n",
     "pivoted = pivoted.reset_index()\n",
     "pivoted"
@@ -1773,11 +1801,12 @@
     }
    ],
    "source": [
-    "unpivoted = aurora_raw.groupby(['zona_pais', 'gestor', 'date_'])['id'].count().reset_index()\n",
+    "unpivoted = aurora_raw.groupby(['zona_pais', 'gestor', 'date_'])[\n",
+    "    'id'].count().reset_index()\n",
     "pivoted1 = unpivoted.pivot(\n",
-    "   columns='date_',\n",
-    "   index= ['zona_pais', 'gestor'],\n",
-    "  values='id')\n",
+    "    columns='date_',\n",
+    "    index=['zona_pais', 'gestor'],\n",
+    "    values='id')\n",
     "# Reset the index of the pivoted DataFrame\n",
     "pivoted1 = pivoted1.reset_index()\n",
     "pivoted1"
@@ -1810,7 +1839,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
